# ghost-complete

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
crates/gc-buffer/src/: context.rs  lib.rs  tokenizer.rs
crates/gc-config/: Cargo.toml
crates/gc-config/src/: lib.rs
crates/gc-overlay/src/: ansi.rs  layout.rs  lib.rs  render.rs  types.rs
crates/gc-parser/: Cargo.toml
crates/gc-parser/src/: lib.rs  performer.rs  state.rs
crates/gc-pty/: Cargo.toml
crates/gc-pty/src/: handler.rs  input.rs  lib.rs  proxy.rs
crates/gc-suggest/: Cargo.toml
crates/gc-suggest/src/: engine.rs  fuzzy.rs  history.rs  lib.rs  specs.rs
crates/ghost-complete/: Cargo.toml
crates/ghost-complete/src/: install.rs  main.rs  validate.rs
crates/ghost-complete/tests/: smoke.rs
crates/ghost-complete/tests/harness/: mod.rs
docs/: CONFIGURATION.md  STABILIZATION_PLAN.md
docs/plans/: 2026-02-28-phase5-overlay.md  2026-02-28-phase6-integration-design.md
docs/superpowers/specs/: 2026-03-12-fig-spec-compat-design.md
shell/: ghost-complete.bash  ghost-complete.fish
specs/: brew.json  cargo.json  curl.json  docker.json  gh.json  grep.json  jq.json  kubectl.json  make.json  npm.json  pip.json  pip3.json  python.json  python3.json  ssh.json  tar.json
