[workspace]
resolver = "2"
members = [
    "crates/ghost-complete",
    "crates/gc-pty",
    "crates/gc-parser",
    "crates/gc-buffer",
    "crates/gc-suggest",
    "crates/gc-overlay",
    "crates/gc-config",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Stanislaw Marek"]
repository = "https://github.com/StanMarek/ghost-complete"
homepage = "https://github.com/StanMarek/ghost-complete"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
crossterm = "0.29"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
