[package]
name = "gc-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
toml = "1.0"
dirs = "6"
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
