[package]
name = "gc-pty"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = "0.8"
tokio = { workspace = true }
crossterm = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
anyhow = { workspace = true }
tracing = { workspace = true }
gc-parser = { path = "../gc-parser" }
