[package]
name = "gc-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
portable-pty = "0.8"
tokio = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
gc-parser = { path = "../gc-parser" }
gc-buffer = { path = "../gc-buffer" }
gc-suggest = { path = "../gc-suggest" }
gc-overlay = { path = "../gc-overlay" }
gc-config = { path = "../gc-config" }
dirs = "6"
