[package]
name = "gc-suggest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
gc-buffer = { path = "../gc-buffer" }
nucleo = "0.5"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
dirs = "6"

[dev-dependencies]
tempfile = "3"
