[package]
name = "ghost-complete"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal-native autocomplete engine using PTY proxying, built for Ghostty"
keywords = ["terminal", "autocomplete", "completion", "pty", "ghostty"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "ghost-complete"
path = "src/main.rs"

[dependencies]
gc-pty = { path = "../gc-pty" }
gc-config = { path = "../gc-config" }
gc-suggest = { path = "../gc-suggest" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
dirs = "6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1"

[dev-dependencies]
portable-pty = "0.8"
tempfile = "3"
toml = "0.8"
